[gd_scene load_steps=5 format=3 uid="uid://cidor8csiohus"]

[ext_resource type="Script" uid="uid://baqpldf3atlrp" path="res://Code/Scenes/UI/Cards/body_item.gd" id="1_3ej87"]
[ext_resource type="Resource" uid="uid://2p0hc22v0g1o" path="res://Resources/Components/Pokemon/Bodies/WitheringDust.tres" id="2_loqau"]
[ext_resource type="Theme" uid="uid://crahea8fl2d3s" path="res://Themes/Themes/BodyButton.tres" id="3_isp2w"]
[ext_resource type="Texture2D" uid="uid://dmlnngpyb3if" path="res://Art/ETCIcons/Pokebody.png" id="5_07ss0"]

[node name="Body" type="MarginContainer"]
offset_left = 1.0
offset_top = -1.0
offset_right = 401.0
offset_bottom = 59.0
mouse_filter = 2
script = ExtResource("1_3ej87")
body = ExtResource("2_loqau")
metadata/_edit_group_ = true

[node name="BodyButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_isp2w")
disabled = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="AllText" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 11

[node name="Base Text" type="HBoxContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="AllText/Base Text"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 20

[node name="PokeBodyIcon" type="TextureRect" parent="AllText/Base Text"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_07ss0")

[node name="Name" type="RichTextLabel" parent="AllText/Base Text"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[center]Everyone Explode Now"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="AllText/Base Text"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 15

[node name="MarginContainer3" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 1

[node name="EffectContainer" type="HBoxContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="AllText/EffectContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 10

[node name="EffectText" type="RichTextLabel" parent="AllText/EffectContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
mouse_filter = 2
text = "HUGE EFFECT TEX LIKE SUPER HUGE, JUST SAY EVERYTHING YOU EVER WANTED TO SAY, YOUR WILL YOUR DECLARATION. MAYBE THROW IN THAT 10 HOUR VIDEO ESSAY YOU LIKED SO MUCH. MAYBE NOT... SORRY"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="AllText/EffectContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10

[node name="MarginContainer2" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="minimum_size_changed" from="BodyButton" to="." method="_on_attack_button_minimum_size_changed"]
